[gd_scene load_steps=4 format=2]

[ext_resource path="res://cue/cue.gd" type="Script" id=1]
[ext_resource path="res://cue/Cylinder_002.mesh" type="ArrayMesh" id=2]
[ext_resource path="res://cue/rot_arrows.svg" type="Texture" id=3]

[node name="Cue" type="Spatial"]

script = ExtResource( 1 )

[node name="CueMesh" type="MeshInstance" parent="." index="0"]

transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, -32, 0, 0 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = ExtResource( 2 )
skeleton = NodePath("..")
material/0 = null
_sections_unfolded = [ "Transform" ]

[node name="AngleInfo" type="Spatial" parent="." index="1"]

[node name="Sprite3D" type="Sprite3D" parent="AngleInfo" index="0"]

transform = Transform( -4.37114e-08, -1, -4.37114e-08, 0, -4.37114e-08, 1, -1, 4.37114e-08, 1.91069e-15, -3, 1, 0 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
centered = true
offset = Vector2( 0, 0 )
flip_h = false
flip_v = false
modulate = Color( 1, 1, 1, 1 )
opacity = 1.0
pixel_size = 0.01
axis = 2
transparent = true
shaded = false
double_sided = true
alpha_cut = 0
texture = ExtResource( 3 )
vframes = 1
hframes = 1
frame = 0
region_enabled = false
region_rect = Rect2( 0, 0, 0, 0 )
_sections_unfolded = [ "Flags", "Geometry", "Transform" ]

[node name="PowerInfo" type="Spatial" parent="." index="2"]


